hphp/hack/test/typecheck/refinements/inter_deprecate.php.exp
WARN: File "inter_deprecate.php", line 16, characters 13-19:
Invalid condition: a value of type `B` will always be truthy (Warn[12006])
ERROR: File "inter_deprecate.php", line 17, characters 13-15:
The method foo is deprecated: blah (Typing[4128])
  File "inter_deprecate.php", line 6, characters 19-21:
  Definition is here
